fix(masterjabatancontroller) : update dokumentasi api & implementasi error handling
